Fix evil evil code

--- a/app/assets/javascripts/templates/shared/dropdown-selector.hbs
+++ b/app/assets/javascripts/templates/shared/dropdown-selector.hbs
@@ -9,7 +9,7 @@
           </li>
         {{/unless}}
       {{else}}
-        <li role="option" tabindex="-1" class="option js-option {{#if separator}} -separator"{{/if}}" data-id="{{id}}">
+        <li role="option" tabindex="-1" class="option js-option {{#if separator}} -separator{{/if}}" data-id="{{id}}">
           {{name}}
         </li>
       {{/if_eq}}
