--- a/app/assets/stylesheets/components/shared/c-content.scss
+++ b/app/assets/stylesheets/components/shared/c-content.scss
@@ -280,4 +280,15 @@
       }
     }
   }
+
+  .-raw-html {
+    iframe {
+      display: block;
+      margin: 0 auto;
+
+      & + p {
+        text-align: center;
+      }
+    }
+  }
 }
