--- a/app/views/admin/user_steps/role.html.erb
+++ b/app/views/admin/user_steps/role.html.erb
@@ -18,26 +18,18 @@
       <div class="c-cards-list">
           <div class="card">
             <label for="user_role_admin">admin</label>
-            <%= radio_button_tag 'user[role]', UserType::ADMIN, f.object.role , id: 'user_role_admin' %>
+            <%= radio_button_tag 'user[admin]', true, f.object.admin, id: 'user_role_admin' %>
             <div class="content">
-              <h3>Admin</h3>
-              <p>An admin can create, edit and delete any users, any sites and any pages</p>
+              <h3><%= User::ADMIN_ROLE_NAME %></h3>
+              <p>An <%= User::ADMIN_ROLE_NAME.downcase %> can create, edit and delete any users, any sites and any pages</p>
             </div>
           </div>
           <div class="card">
-            <label for="user_role_manager">management</label>
-            <%= radio_button_tag 'user[role]', UserType::MANAGER, f.object.role, id: 'user_role_manager' %>
+            <label for="user_role_contributor">contributor</label>
+            <%= radio_button_tag 'user[admin]', false, !f.object.admin, id: 'user_role_contributor' %>
             <div class="content">
-              <h3>Manager</h3>
-              <p>A manager has only access to some sites to create, edit and delete their pages</p>
-            </div>
-          </div>
-          <div class="card">
-            <label for="user_role_publisher">publish</label>
-            <%= radio_button_tag 'user[role]', UserType::PUBLISHER, f.object.role, id: 'user_role_publisher' %>
-            <div class="content">
-              <h3>Publisher</h3>
-              <p>A publisher has only access to some sites to create their content</p>
+              <h3><%= User::NON_ADMIN_ROLE_NAME %></h3>
+              <p>A <%= User::NON_ADMIN_ROLE_NAME.downcase %> has only access to some sites</p>
             </div>
           </div>
       </div>
