adds additional fields to notifications modal

--- a/app/assets/javascripts/templates/shared/notification-modal.hbs
+++ b/app/assets/javascripts/templates/shared/notification-modal.hbs
@@ -3,6 +3,11 @@
 
   <div class="notifications-modal-content">
     <p>{{content}}</p>
+    <ul>
+    {{#each bullets}}
+      <li>{{this}}</li>
+    {{/each}}
+    </ul>
   </div>
 </div>
 
