align button in center

--- a/app/assets/javascripts/templates/management/widget-deletion-modal.hbs
+++ b/app/assets/javascripts/templates/management/widget-deletion-modal.hbs
@@ -13,7 +13,7 @@
   </div>
 </div>
 
-<div class="c-action-bar -embed">
+<div class="c-action-bar -embed -center">
   <div class="wrapper">
     <button type="submit" class="c-button js-continue">Ok</button>
   </div>
