--- a/app/assets/stylesheets/components/shared/c-action-bar.scss
+++ b/app/assets/stylesheets/components/shared/c-action-bar.scss
@@ -36,5 +36,11 @@
     > .wrapper {
       padding: 0 45px;
     }
+
+    &.-center {
+      > .wrapper {
+        justify-content: center;
+      }
+    }
   }
 }
