uses gon to display sites

--- a/app/assets/javascripts/templates/management/widget-deletion-modal.hbs
+++ b/app/assets/javascripts/templates/management/widget-deletion-modal.hbs
@@ -6,8 +6,8 @@
       This widget is present in the following pages. Please remove it from all pages before deleting.
     </p>
     <ul class="widgets-modal-pages-list">
-    {{#each errors}}
-      <li>{{this}}</li>
+    {{#each widget}}
+      <li>Site {{site.name}} / Page {{page.name}}</li>
     {{/each}}
     </ul>
   </div>
