--- a/app/views/shared/_messages.html.erb
+++ b/app/views/shared/_messages.html.erb
@@ -23,7 +23,7 @@
     <script>
       App.notifications.display({
         type: '<%= value[:type] %>',
-        content: '<%= value[:errors] %>'
+        content: '<%= value[:content] %>'
       });
     </script>
     <% end %>
