--- a/app/assets/stylesheets/components/shared/c-cards-list.scss
+++ b/app/assets/stylesheets/components/shared/c-cards-list.scss
@@ -17,6 +17,13 @@
       position: absolute;
       left: -10000px;
 
+      &:disabled + .content {
+        border-color: $color-3;
+        background: $color-4;
+        color: $color-3;
+        cursor: not-allowed;
+      }
+
       &:checked + .content {
         border-color: $color-1;
         background: $color-1;
