--- a/app/views/front/_cover.html.erb
+++ b/app/views/front/_cover.html.erb
@@ -1,17 +1,21 @@
 <div class="c-cover <%= '-short' if defined?(size) && size == 'small' %>" style="background-image: url('<%= image if defined?(image) %>');">
   <div class="wrapper">
-    <h2 class="cover-subtitle"><%= @site_page.site.name %></h2>
-    <h2 class="cover-title"><%= @site_page.name %></h2>
+    <% if defined?(site_title_only) and site_title_only.eql? true %>
+        <h2 class="cover-title"><%= @site_page.site.name %></h2>
+    <% else %>
+        <h2 class="cover-subtitle"><%= @site_page.site.name %></h2>
+        <h2 class="cover-title"><%= @site_page.name %></h2>
+    <% end %>
   </div>
   <div class="cover-attribution">
     <% if defined?(image) && defined?(image.instance) %>
-      <% if image.instance.attribution_link.present? && image.instance.attribution_label.present? %>
-      <a target="_blank" href="<%= image.instance.attribution_link %>"> <%= image.instance.attribution_label %> </a>
-      <% end %>
+        <% if image.instance.attribution_link.present? && image.instance.attribution_label.present? %>
+            <a target="_blank" href="<%= image.instance.attribution_link %>"> <%= image.instance.attribution_label %> </a>
+        <% end %>
 
-      <% if !image.instance.attribution_link.present? && image.instance.attribution_label.present? %>
-      <p> <%= image.instance.attribution_label %> </p>
-      <% end %>
+        <% if !image.instance.attribution_link.present? && image.instance.attribution_label.present? %>
+            <p> <%= image.instance.attribution_label %> </p>
+        <% end %>
     <% end %>
   </div>
 </div>
