Hide role radio buttons when user / site not selected

--- a/app/assets/stylesheets/components/shared/c-cards-list.scss
+++ b/app/assets/stylesheets/components/shared/c-cards-list.scss
@@ -23,6 +23,10 @@
         color: $color-3;
       }
 
+      &:not(:checked) + .content + footer {
+        visibility: hidden;
+      }
+
       &:focus:not(:checked) +.content {
         border-color: $color-1;
       }
