Allow manager to add new user

--- a/app/views/management/_extended_header.html.erb
+++ b/app/views/management/_extended_header.html.erb
@@ -10,6 +10,7 @@
         <% else %>
             <li><%= link_to 'New page', new_management_site_page_step_path, class: 'c-button -outline' %></li>
          <% end %>
+         <li><%= link_to 'New user', new_management_site_user_path(@site.slug), class: 'c-button -outline' %></li>
           <% if @url.present? %><li><a href="<%= @url %>" class="c-button">Go to site</a></li><% end %>
         </ul>
       </div>
