connects dashboard to updated backend

--- a/app/views/management/page_steps/preview.html.erb
+++ b/app/views/management/page_steps/preview.html.erb
@@ -1,5 +1,6 @@
 <% content_for :extended_header do %>
-  <div class="c-extended-header">
+  <!--suppress ALL -->
+    <div class="c-extended-header">
     <div class="wrapper">
       <div class="description">
         <h1>Layout preview</h1>
