changes color and decoration of cover-attribution links

--- a/app/assets/stylesheets/components/front/c-cover.scss
+++ b/app/assets/stylesheets/components/front/c-cover.scss
@@ -99,9 +99,15 @@
 
     > a {
       background-color: unset;
+      color: $color-3;
+      text-decoration: none;
 
       &:hover {
         text-decoration: underline;
+      }
+
+      &::selection {
+        background-color: unset;
       }
     }
 
