--- a/app/assets/stylesheets/layouts/management/l-dataset-creation.scss
+++ b/app/assets/stylesheets/layouts/management/l-dataset-creation.scss
@@ -56,6 +56,10 @@
         }
       }
 
+      div.input-container--disabled {
+        display: none;
+      }
+
       .select2 {
         .select2-selection {
           min-height: 40px;
