--- a/lib/assets/terms_template.json.erb
+++ b/lib/assets/terms_template.json.erb
@@ -1,6 +1,6 @@
 {
   "ops": [
-    {"insert": "The World Resources Institute (WRI) and their suppliers (together sometimes referred to as \"We\" or \"Us\") make this website and the contents you and/or your company or organization (sometimes referred to as \"You\" or \"Your\") may access through it (the \"Site\") available to You under these Terms of Service (\"Terms\").\n"},
+    {"insert": "The <%= hosting_organization.present? ? "#{hosting_organization}, the " : '' %>World Resources Institute (WRI) and their suppliers (together sometimes referred to as \"We\" or \"Us\") make this website and the contents you and/or your company or organization (sometimes referred to as \"You\" or \"Your\") may access through it (the \"Site\") available to You under these Terms of Service (\"Terms\").\n"},
 
     {"insert": "By using this Site, you agree to these Terms.\n"},
 
