Add toggleVisibility button with styles, callback, update form and render only if visible in preview

--- a/app/assets/javascripts/templates/front/chart-widget.hbs
+++ b/app/assets/javascripts/templates/front/chart-widget.hbs
@@ -3,5 +3,6 @@
   <div class="toolbar">
     <div class="js-chart-selector"></div>
     <div class="js-switch-button"></div>
+    <div class="js-toggle-visibility-button"></div>
   </div>
 </div>
