--- a/app/views/management/page_steps/preview.html.erb
+++ b/app/views/management/page_steps/preview.html.erb
@@ -17,7 +17,7 @@
 <%= Gon::Base.render_data(camel_case: true, camel_depth: 3) %>
 
 <%= form_for @page, url: wizard_path, method: :put do |f| %>
-  <input type="hidden" type="text" name="site_page[dataset_setting][widgets]" value="" class="js-widgets-input" />
+  <input type="hidden" type="text" id="widgets-settings" name="site_page[dataset_setting][widgets]" value="" class="js-widgets-input" />
 
   <div class="l-page-creation -dashboard-preview">
     <div class="l-analysis-dashboard">
