unifies line-height accross themes

--- a/app/assets/stylesheets/components/shared/c-content.scss
+++ b/app/assets/stylesheets/components/shared/c-content.scss
@@ -94,6 +94,12 @@
     }
   }
 
+  a {
+    color: $color-1;
+    text-decoration: none;
+    background-color: transparent;
+  }
+
   ul,
   ol {
     display: block;
